# central-server/api_docs.json
@@ -11,186 +11,6 @@
     },
     "basePath": "/",
     "paths": {
-      "/users": {
-        "get": {
-          "tags": ["users"],
-          "summary": "Gets all Users",
-          "produces": ["application/json"],
-          "parameters":[
-            {
-              "in": "header",
-              "name": "Authorization",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "Successfully gets Users"
-            },
-            "401": {
-              "description": "invalid input, object invalid"
-            },
-            "500": {
-              "description": "Server error"
-            }
-          }
-        },
-        "post": {
-          "tags": ["users"],
-          "summary": "Sign up a new user",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "User params",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/user_signup_credentials"
-              }
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "Successfully signed up a new User"
-            },
-            "401": {
-              "description": "invalid input, object invalid"
-            },
-            "500": {
-              "description": "Server error"
-            }
-          }
-        }
-      },
-      "/users/{user_id}": {
-        "get": {
-          "tags": ["users"],
-          "summary": "Gets a single user",
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "in": "path",
-              "name": "user_id",
-              "required": true
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "Successfully gets a single User"
-            },
-            "401": {
-              "description": "invalid input, object invalid"
-            },
-            "404": {
-              "description": "Resource not found"
-            },
-            "500": {
-              "description": "Server error"
-            }
-          }
-        },
-        "patch": {
-          "tags": ["users"],
-          "summary": "Updates user info",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "in": "header",
-              "name": "Authorization",
-              "required": true,
-              "type": "string"
-            },
-            {
-              "in": "path",
-              "name": "user_id",
-              "required": true
-            },
-            {
-              "in": "body",
-              "name": "User params",
-              "required": false,
-              "schema": {
-                "$ref": "#/definitions/user"
-              }
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "Successfully updates existing User"
-            },
-            "401": {
-              "description": "invalid input, object invalid"
-            },
-            "404": {
-              "description": "Resource not found"
-            },
-            "500": {
-              "description": "Server error"
-            }
-          }
-        }
-      },
-      "/users/login": {
-        "post": {
-          "tags": ["users"],
-          "summary": "Login User",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "User params",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/user_login_credentials"
-              }
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "Successfully Logged In User"
-            },
-            "401": {
-              "description": "invalid input, object invalid"
-            },
-            "500": {
-              "description": "Server error"
-            }
-          }
-        }
-      },
-      "/users/reset_password": {
-        "post": {
-          "tags": ["users"],
-          "summary": "Reset User Password",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "User params",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/user_login_credentials"
-              }
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "Successfully Logged In User"
-            },
-            "401": {
-              "description": "invalid input, object invalid"
-            },
-            "500": {
-              "description": "Server error"
-            }
-          }
-        }
-      },
       "/clusters": {
         "get": {
           "tags": ["clusters"],
@@ -301,51 +121,6 @@
       }
     },
     "definitions": {
-      "user_signup_credentials": {
-        "type": "object",
-        "required": ["username", "password", "email"],
-        "properties": {
-          "username": {
-            "type": "string",
-            "example": "user"
-          },
-          "email": {
-            "type": "string",
-            "example": "user@email.com"
-          },
-          "password": {
-            "type": "string",
-            "example": "password"
-          }
-        }
-      },
-      "user_login_credentials": {
-        "type": "object",
-        "required": ["email", "password"],
-        "properties": {
-          "email": {
-            "type": "string",
-            "example": "user@email.com"
-          },
-          "password": {
-            "type": "string",
-            "example": "password"
-          }
-        }
-      },
-      "user": {
-        "type": "object",
-        "properties": {
-          "username": {
-            "type": "string",
-            "example": "test user"
-          },
-          "email": {
-            "type": "email",
-            "example": "user@email.com"
-          }
-        }
-      },
       "cluster": {
         "type": "object",
         "required": ["name", "cluster_id", "port","ip_address"],
